syntax = "proto3";
package test;
// The greeting service definition with modifications
option go_package = "./";

message ExampleReq {
  repeated string reqs = 1;
}

message ExampleResp {
  repeated string resps = 1;
}

message Void {}

service ExampleService {
  rpc ExampleMethod(ExampleReq) returns (ExampleResp);
  rpc VoidMethod(Void) returns (Void);
}






